    Ruby commit r30811 by Usaku Nakamura.
  * Remove unnecessary (and wrong) platform-dependent hacks.  Ruby commit
    r30829 by Usaku Nakamura.
  * Completing via Array#[ in `ri -i` no longer crashes.  Ruby Bug #3167
  * Completing IO::o in `ri -i` now returns results.  Ruby Bug #3167
  * RDoc::Parser::C ignores prototypes better.  Pull Request #34 by Pete
    Higgins.

=== 3.5.3 / 2010-02-06

* Bug fixes
  * When including a file lossily force-transcode it to the output encoding
    instead of crashing to preserve as much content as possible.  Ruby Bug
    #4376 by Yui NARUSE.
  * Work around inconsistent encoding result from String#sub!, String#gsub!.
    Related to Ruby Bug #4376.
  * Work around inconsistent encoding result from String#[]=.  Related to Ruby
    Bug #4376.
  * When Darkfish fails the file being generated is now reported.

=== 3.5.2 / 2010-02-04

* Deprecations
  * RDoc::Context::Section#sequence is now deprecated.  Use
    RDoc::Context::Section#aref instead.

* Bug fixes
  * Fixed syntax highlighting CSS class generation.  Reported by Daniel
    Bretoi.
  * Fixed ri for methods with aliases.  Pull Request #15 by Sven Riedel.
  * Added windows-specific test for test_check_files.
  * Darkfish now supports sections.  Template and generator author see
    RDoc::Context#each_section to add section support.  RubyForge Bug #26883
    by Jeff Hodges.
  * Fixed post-install message for Ruby 1.9.2 users.
  * Set required ruby version to >= 1.8.7.

=== 3.5.1 / 2010-01-30

* Bug fixes
  * Fixed some typos.  Pull request #13 by R.T. Lechow.
  * Ensure an RDoc::Stats is created in #parse_files.  Fixes documentation for
    railties which has no files.  Reported by Aaron Patterson

=== 3.5 / 2010-01-29

* Minor enhancements
  * RDoc::Parser::C looks for rb_scan_args and fills in RDoc::AnyMethod#params
    appropriately.  This may provide useful information if the author did not
    provide a call-seq.